# akaze

./: .gitignore  CMakeLists.txt  README.md
cmake/Hunter/: config.cmake
src/: CMakeLists.txt  akaze_features.cpp  benchmark.cpp  benchmark_cuda.cpp  benchmark_cuda.h  benchmark_opencl.cpp  benchmark_opencl.h  benchmark_options.h  commandLineHelper.cpp  commandLineHelper.h
src/cimg/: CMakeLists.txt
src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  AKAZE_cl.cpp  AKAZE_cl.h  AKAZE_cuda.cpp  AKAZE_cuda.h  akazeTypes.h  config.h.in  convolution.h  convolve_cl.cpp  convolve_cl.h  cuda_akaze.cu  cuda_akaze.h  fed.cpp  filters_cl.cpp  filters_cl.h  nldiffusion_functions.cpp  nldiffusion_functions.h  openClContext.cpp  openClContext.h  utils.cpp  utils.h
src/lib/kernels/: contrast.cl  convolve.cl  determinantHessian.cl  filterExtremaAlt.cl  filters.cl  lowPassFilter.cl  templates.h
src/timer/: CMakeLists.txt  timer.hpp
